--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@tailwindcss/postcss": "^4",
+    "autoprefixer": "^10.4.14",
     "tailwindcss": "^4"
   }
 }
